Removed Images to display
